IPP/projects/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_esc_sequence1.src
.IPPcode19
MOVE GF@tahu string@taht\13
